--- a/back/package.json
+++ b/back/package.json
@@ -19,12 +19,16 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "env-var": "^7.1.1",
     "express": "^4.17.3",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.8",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.11.0",
