--- a/back/package.json
+++ b/back/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --exec npx ts-node src/server.ts",
-    "start:dev": "nodemon --exec npx ts-node src/server.ts"
+    "start": "nodemon --exec npx ts-node src/server.ts"
   },
   "compilerOptions": {
     "module": "CommonJS"
@@ -28,6 +27,7 @@
     "mongoose": "^6.2.8",
     "ts-node": "^10.7.0",
     "passport": "^0.5.2",
+    "nodemon": "^2.0.15",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
