--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
   "author": "Mahery",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.6",
     "cors": "^2.8.5",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
@@ -27,6 +28,7 @@
     "mongoose": "^6.2.8",
     "ts-node": "^10.7.0",
     "passport": "^0.5.2",
+    "nodemailer": "^6.7.3",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
