--- a/front/m1p9mean-mahery/package.json
+++ b/front/m1p9mean-mahery/package.json
@@ -8,7 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "engines": { "node": "^16.13.2", "npm": "^8.1.2" },
+  "engines": {
+    "node": "^16.13.2",
+    "npm": "^8.1.2"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
@@ -24,6 +27,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "express": "^4.17.3",
+    "ng-http-loader": "^11.0.1",
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
